update readme for executable