@@ -22,7 +22,7 @@ The following tools must be installed already:
 - git
 - Java
 - JDK 20
-- JavaFX version 19
+- JavaFX SDK 20
 - Maven
 - JRE 17+
 
@@ -42,4 +42,12 @@ mvn clean javafx:run
 ```
 
 # Jar File
+1. Download JavaFX SDK 20 from this link: https://gluonhq.com/products/javafx/
+
+2. Download the executable Jar File below:
 [Sprint 4 Jar File](docs/sprint 4/FIT3077_MA_FRIDAY_2PM_Sprint_4.jar)
+
+3. Run the executable jar file through the command line.
+```
+java --module-path <Path to JavaFX SDK>/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media -jar <Path to JAR File>
+```
